Added missing `x-product-instance-id` header doc for RPD, ValidateVPA and PennyLess

--- a/content/data/bav/pennyless-drop/quickstart.mdx
+++ b/content/data/bav/pennyless-drop/quickstart.mdx
@@ -16,6 +16,7 @@ Here are the URLs you would need for this integration—
 -   Headers—Contact Setu for providing the credentials required to successfully call Setu APIs. This contains:
     -   `x-client-id`
     -   `x-client-secret`
+    -   `x-product-instance-id`
 
 While testing on Sandbox, you may use the following sample values—
 - Test merchant bank account: 1234567890 (accountNumber), UTIB0002083 (ifsc)
