--- a/content/data/bav/reverse-penny-drop/api-integration.mdx
+++ b/content/data/bav/reverse-penny-drop/api-integration.mdx
@@ -13,7 +13,7 @@ Here are the few things you would need for this integration—
 
 -   Sandbox — `https://dg-sandbox.setu.co`
 -   Production — `https://dg.setu.co`
--   Headers — `x-client-id` and `x-client-secret` (Contact Setu for providing the credentials required to successfully call Setu APIs)
+-   Headers — `x-client-id`, `x-client-secret` and `x-product-instance-id`
 -   Webhook endpoint: You need to create a [webhook url](#notifications---webhooks) on your server. Once configured, Setu will send notifications to that URL.
 
 <Callout type="tip">
