--- a/content/data/bav/reverse-penny-drop/quickstart.mdx
+++ b/content/data/bav/reverse-penny-drop/quickstart.mdx
@@ -21,7 +21,7 @@ This is started once Setu’s sales team has interacted with you and confirmed i
 
 ### Step 2 — Get API credentials
 
-Contact Setu on <a href="">onboarding@setu.co</a> to get `x-client-id` and `x-client-secret` details. These credentials are required to make API calls on sandbox or production.
+Contact Setu on <a href="">onboarding@setu.co</a> to get credentials. 
 
 <hr class="primary" />
 
