--- a/content/data/bav/analyse-vpa/quickstart.mdx
+++ b/content/data/bav/analyse-vpa/quickstart.mdx
@@ -16,6 +16,7 @@ Here are the URLs you would need for this integration—
 -   Headers—Contact Setu for providing the credentials required to successfully call Setu APIs. This contains:
     -   `x-client-id`
     -   `x-client-secret`
+    -   `x-product-instance-id`
 
 <hr class="primary" />
 
