--- a/content/data/account-aggregator/licenses-and-go-live/participants-in-aa.mdx
+++ b/content/data/account-aggregator/licenses-and-go-live/participants-in-aa.mdx
@@ -13,58 +13,13 @@ This page provides a list of all the entities that are at various stages of impl
 
 ### Live FIPs and FIUs
 
-| Sr. No | Entity name                                        | Regulatory Type               | AA implementation stage |
-| ------ | -------------------------------------------------- | ----------------------------- | ----------------------- |
-| 1      | Axis Bank                                          | Bank                          | Live                    |
-| 2      | Federal Bank                                       | Bank                          | Live                    |
-| 3      | Union Bank of India                                | Bank                          | Live                    |
-| 4      | HDFC Bank                                          | Bank                          | Live                    |
-| 5      | ICICI Bank                                         | Bank                          | Live                    |
-| 6      | IDFC First Bank                                    | Bank                          | Live                    |
-| 7      | IndusInd Bank                                      | Bank                          | Live                    |
-| 8      | Karur Vysya Bank (KVB)                             | Bank                          | Live                    |
-| 9      | IIFL (India Infoline Finance)                      | NBFC                          | Live                    |
-| 10     | Alice Blue Financial Services Pvt Ltd              | Stock Broker                  | Live                    |
-| 11     | DMI Finance Pvt Ltd                                | NBFC                          | Live                    |
-| 12     | Lendingkart Finance Limited                        | NBFC                          | Live                    |
-| 13     | Epifi Wealth Private Limited                       | Registered Investment Advisor | Live                    |
-| 14     | GoalTeller                                         | Registered Investment Advisor | Live                    |
-| 15     | AU Small Finance Bank Limited                      | Bank                          | Live                    |
-| 16     | Riviera Investors Private Limited                  | NBFC                          | Live                    |
-| 17     | Kotak Bank                                         | Bank                          | Live                    |
-| 18     | Epimoney Private Limited                           | NBFC                          | Live                    |
-| 19     | Navi Finserv Private Limited                       | NBFC                          | Live                    |
-| 20     | Harvinder Finance Company                          | NBFC                          | Live                    |
-| 21     | Finzoom Investment Advisors Private Limited        | Registered Investment Advisor | Live                    |
-| 22     | Snapmint Financial Services Private Limited        | NBFC                          | Live                    |
-| 23     | Piramal Capital & Housing Finance Limited          | NBFC                          | Live                    |
-| 24     | Amica Financial Services                           | Registered Investment Advisor | Live                    |
-| 25     | Payme India                                        | NBFC                          | Live                    |
-| 26     | Policybazaar Insurance Brokers Pvt Ltd             | Insurance web aggregator      | Live                    |
-| 27     | LoanTap Credit Products Private Limited            | NBFC                          | Live                    |
-| 28     | Bajaj Allianz Life Insurance Co. Ltd               | Insurer                       | Live                    |
-| 29     | Small Industries Development Bank of India (SIDBI) | Bank                          | Live                    |
-| 30     | U GRO Capital                                      | NBFC                          | Live                    |
-| 31     | Amros Commercial Private Limited                   | NBFC                          | Live                    |
-| 32     | Vistaar Financial Services Private Limited         | NBFC                          | Live                    |
-| 33     | A&A Dukaan Financial Services Pvt Ltd              | Point of Presence             | Live                    |
-| 34     | Lord Fincap Ltd                                    | NBFC                          | Live                    |
-| 35     | Spenny Fintech Private Limited                     | NBFC                          | Live                    |
-| 36     | Ekagrata Finance Private Limited                   | NBFC                          | Live                    |
-| 37     | Paisabazaar                                        | Registered Investment Advisor | Live                    |
-| 38     | i-Loan Credit Products Private Limited             | NBFC                          | Live                    |
-| 39     | Lunchbrake Technologies Private Limited            | Retirement Adviser            | Live                    |
-| 40     | 121 Finance Private Limited                        | NBFC                          | Live                    |
-| 41     | Gromor Finance Private Limited                     | NBFC                          | Live                    |
-| 42     | Mamta Projects Private Limited                     | NBFC                          | Live                    |
-| 43     | Quadrillion Finance Private Limited                | NBFC                          | Live                    |
-| 44     | NU Investment Pvt. Ltd.                            | Stock Broker                  | Live                    |
-| 45     | Oxyzo Financial Services                           | NBFC                          | Live                    |
-| 46     | RKSV Securities India Pvt Ltd                      | Registered Investment Advisor | Live                    |
-| 47     | Cars24 Financial Services                          | NBFC                          | Live                    |
-| 48     | Tata Capital Financial Services Ltd                | NBFC                          | Live                    |
-| 49     | Neo Opportunities Fund Trust                       | Alternative Investment Fund   | Live                    |
-| 50     | Max Life Insurance                                 | Insurer                       | Live                    |
+You can check out all the live FIPs and FIUs [here](https://sahamati.org.in/fip-fiu-in-account-aggregators-ecosystem/)
+
+<hr class="primary" />
+
+### FIP-AA mapping
+
+You can check out FIP-AA mapping [here](https://sahamati.org.in/fip-aa-mapping/)
 
 <hr class="primary" />
 
@@ -201,14 +156,14 @@ This page provides a list of all the entities that are at various stages of impl
 Setu is a TSP that can help you become an FIU and participate in the Account Aggregator ecosystem.
 
 <Element
-  as="a"
-  href="https://setu.co/contact-sales?&category=Data&product=AccountAggregator&partner=tech-partner"
-  target="_blank"
+    as="a"
+    href="https://setu.co/contact-sales?&category=Data&product=AccountAggregator&partner=tech-partner"
+    target="_blank"
 >
-  {" "}
-  <Button kind="primary" shadow="hard" size="small">
-    BECOME AN FIU ↗
-  </Button>
+    {" "}
+    <Button kind="primary" shadow="hard" size="small">
+        BECOME AN FIU ↗
+    </Button>
 </Element>
 
 <hr class="primary" />
@@ -218,10 +173,10 @@ Setu is a TSP that can help you become an FIU and participate in the Account Agg
 Information source—<a href="https://sahamati.org.in/fip-fiu-in-account-aggregators-ecosystem/" target="_blank">Sahamati</a>
 
 <NextPage
-  info={{
-    description: "Licenses required to partipate in AA ecosystem.",
-    slug: "/data/account-aggregator/licenses-and-go-live/licenses",
-    title: "Licenses",
-  }}
+    info={{
+        description: "Licenses required to partipate in AA ecosystem.",
+        slug: "/data/account-aggregator/licenses-and-go-live/licenses",
+        title: "Licenses",
+    }}
 />
 <WasPageHelpful />
