--- a/content/data/account-aggregator/overview.mdx
+++ b/content/data/account-aggregator/overview.mdx
@@ -38,11 +38,22 @@ Try out our sample app built using Setu AA sandbox <a href="https://github.com/S
 
 #### What can you build?
 
-Setu’s AA related services are powered by a <a href="https://www.onemoney.in/" target="_blank">licensed NBFC-AA partner.</a> The AA framework opens up a lot of opportunities for FIU apps to build financial user journeys with seamless user consented data sharing. This allows developers to build tech-first user applications and features powered by digital data sharing flows over conventional PDF documents upload. Some of the use cases worth exploring:
+Setu’s AA related services are powered by multiple licensed NBFC-AA partners. The AA framework opens up a lot of opportunities for FIU apps to build financial user journeys with seamless user consented data sharing.
+
+This allows developers to build tech-first user applications and features powered by digital data sharing flows over conventional PDF documents upload. Some of the use cases worth exploring:
 
 1. **Income Verification** - Get access to users’ bank statements with their consents. While Setu AA ensures that the data payload remains standardised and error free, simplify your user verification process and improve conversion rates!
 2. **Loan Monitoring** - Monitor your borrower’s financial health after loan disbursal by analysing cash flow across a user’s bank accounts. As a lender, get early signals from a user's bank statements and prevent potential loan defaults.
 3. **Personal Finance Management** - Help your users make better financial decisions. Pull transactions, categorise and track spending patterns across multiple bank accounts and much more.
+
+<Callout type="tip">
+    For more details, you can check out our{" "}
+    <a href="https://setu.co/AA_playbook.pdf" target="_blank">
+        AA use-case playbook
+    </a>
+</Callout>
+
+<br />
 
 Get started with Setu's mock FIP that lets you receive financial data across multiple FI types. We will soon add the ability for you to configure custom mock data sources. If you would like to test this feature, please reach out to us at aa@setu.co.
 
