--- a/content/data/account-aggregator/api-integration/consent-flow.mdx
+++ b/content/data/account-aggregator/api-integration/consent-flow.mdx
@@ -9,11 +9,17 @@ visible_in_sidebar: true
 
 Get users' consent before you can start pulling their financial data with Setu AA by initiating Consent flow in your application. This flow broadly consists of two parts:
 
-1.  **Create Consent Request**—this is essentially a one-time data request that your user needs to approve. To know more details about this please visit [Consent Object](/data/account-aggregator/consent-object) page.
+1.  **Create Consent Request** — This is essentially a one-time data request that your user needs to approve. To know more details about this please visit [Consent Object](/data/account-aggregator/consent-object) page.
 
 -   Once a consent is created, you will receive a unique `id` with `status = PENDING`, along with a `url` where you can **redirect your customer to consent manager screens**, to review the data request. Here, the user may approve or reject the request
 
-2. **Consent Request status**—You can track the consent status with Get Consent Status API, alternatively Setu will notify you when the user has acted upon the consent request. See [Notifications](/data/account-aggregator/api-integration/notifications) to configure your notification endpoint.
+2. **Consent Request status** — You can track the consent status with Get Consent Status API, alternatively Setu will notify you when the user has acted upon the consent request. See [Notifications](/data/account-aggregator/api-integration/notifications) to configure your notification endpoint.
+
+Consent Request has other functionalities that can FIUs can use according to their use case.
+
+1. **Dual Consent Request** - Merge two consents into a single UI flow, with its own unique dual consent ID.
+
+2. **Revoke Consent Request** - A revoke API for FIUs to withdraw or manually revoke an end users' consent for any purpose or on behalf of the customer
 
 <hr class="primary" />
 
@@ -154,7 +160,7 @@ Call this API to create a consent request. The details of the request will be pr
                     ),
                 },
             ]}
-        ></Tabs>
+        />
     </Portion>
 
 </Row>
@@ -356,7 +362,145 @@ If the consent is approved, the Status in the response will be `ACTIVE`. After t
                     ),
                 },
             ]}
-        ></Tabs>
+        />
     </Portion>
 </Row>
+
+<hr class="primary" />
+
+### Dual Consent Request
+
+In the Account Aggregator (AA) ecosystem in India, the Dual Consent feature allows Financial Information Users (FIUs) to streamline the process of obtaining consent from customers for data sharing. By merging two separate consent requests into a single flow, FIUs can enhance the user experience, reduce friction, and ensure higher completion rates for consent acquisition.
+
+This document details the API endpoint, request parameters, and usage examples for implementing the Dual Consent feature.
+
+<Callout type="warning">
+    Currently, the dual consent feature supports merging two consent requests.
+    For more complex scenarios, consider additional consent requests as separate
+    flows.
+</Callout>
+
+<br />
+
+##### Features
+
+-   **Single UI Flow**: Merges two consent requests into a single UI flow, displaying the consent parameters of each request in a consolidated manner.
+
+-   **Optional and Mandatory Consents**: Offers flexibility in making one of the consents optional, while the other remains mandatory, allowing customers to choose which data they are willing to share.
+
+-   **Unified OTP Authentication**: Simplifies the authentication process by requiring only a single set of OTP authentications for the dual consent flow.
+
+<br />
+
+###### Implementation Guide
+
+-   Prepare Consent Requests: Prior to using the Dual Consent API, prepare the individual consent requests as per the standard procedure in the AA ecosystem.
+
+-   Initiate Dual Consent: Use the provided API endpoint to initiate a dual consent process by specifying which consents are optional and which are mandatory.
+
+-   Handle Responses: On success, direct the customer to the redirectUrl for consent confirmation. Handle errors as per the error response structure.
+
+-   Follow Up: Monitor the status of consent through the standard consent status APIs to ensure proper data flow post-consent.
+
+For further assistance or to report issues with the Dual Consent API, please contact our developer support team.
+
+###### Request
+
+<table>
+    <tbody>
+        <tr>
+            <th>Base URL</th>
+            <td>
+                Production: <code>https://fiu-sandbox.setu.co</code>
+                <br />
+                Sandbox: <code>https://fiu-unified.setu.co</code>
+            </td>
+        </tr>
+        <tr>
+            <th>Path</th>
+            <td>
+                <code>/v2/consents/consents/collection</code>
+            </td>
+        </tr>
+        <tr>
+            <th>Method</th>
+            <td>
+                <code>POST</code>
+            </td>
+        </tr>
+        <tr>
+            <th>Headers</th>
+            <td>
+                <code>Content-Type</code>: <code>application/json</code> <br />
+                <code>Authorization</code>: Bearer <code>access_token</code>
+            </td>
+        </tr>
+    </tbody>
+</table>
+
+<br />
+
+###### Sample Request body
+
+<CodeBlockWithCopy language="json">
+    {`{
+    "optionalConsents": [],
+    "mandatoryConsents": ["36c34bbc-9408-454e-a80e-e44f4fc4cdbf"]
+}`}
+</CodeBlockWithCopy>
+
+<Callout type="tip">
+    <strong>
+        At least one consent must be marked as mandatory to initiate the dual
+        consent process.
+    </strong>
+</Callout>
+
+<br />
+
+###### Sample Response
+
+<Row>
+    <Portion desktopSpan="whole">
+        <Tabs
+            tabs={[
+                {
+                    key: "1",
+                    label: <Badge type="success">SUCCESS</Badge>,
+                    content: (
+                        <>
+                            <h5>Response</h5>
+                            <CodeBlockWithCopy language="json">
+                                {`{
+    "status": "success",
+    "message": "Dual consent initiated successfully.",
+    "data": {
+        "consentHandleId": "unique-consent-handle-id",
+        "redirectUrl": "https://example.com/consent/confirmation"
+    }
+}`}
+                            </CodeBlockWithCopy>
+                        </>
+                    ),
+                },
+                {
+                    key: "2",
+                    label: <Badge type="failure">FAIL</Badge>,
+                    content: (
+                        <>
+                            <h5>Response</h5>
+                            <CodeBlockWithCopy language="json">
+                                {`{
+    "status": "error",
+    "message": "Invalid request data."
+}`}
+                            </CodeBlockWithCopy>
+                        </>
+                    ),
+                },
+            ]}
+        />
+    </Portion>
+</Row>
+
 <WasPageHelpful />
